--- a/index.html
+++ b/index.html
@@ -19,58 +19,56 @@
   </header>
   
   <main>
-
     <div id="contrastOptions" aria-label="Opções de contraste">
-      <button id="blackAndWhite" aria-label="Preto e Branco">Preto e Branco</button>
-      <button id="highContrast" aria-label="Alto Contraste">Rosa</button>
-      <button id="blueContrast" aria-label="Azul">Azul</button>
+        <button id="blackAndWhite" aria-label="Preto e Branco">Preto e Branco</button>
+        <button id="highContrast" aria-label="Alto Contraste">Rosa</button>
+        <button id="blueContrast" aria-label="Azul">Azul</button>
     </div>
 
     <h2>Acessibilidade na Transcrição de áudio</h2>
     <br>
-    <article>
-      <div class="caixa1">
-        <button onclick="toggleVisibility('section1')">Mostrar/Ocultar</button>
-        <div id="section1" class="hidden">
-          <h2>Importância da Transcrição de áudio na Acessibilidade</h2>
-          <p>A transcrição de áudio desempenha um papel crucial na promoção da acessibilidade para pessoas com deficiência auditiva,</p>
-          <p>bem como para indivíduos com dificuldades de audição. Aqui estão algumas razões pelas quais a transcrição de áudio é importante para a acessibilidade:</p>
-          <p>Acesso à Informação; Compreensão Integral; Conformidade Legal e Normativa; Melhoria da Indexação e Acessibilidade Online.</p>
-          <p>- World Wide Web Consortium (W3C) -</p>
-          
-          <img src="w3c.png">
+    <div class="caixa-container">
+        <div class="caixa1">
+            <button onclick="toggleVisibility('section1')">Mostrar/Ocultar</button>
+            <div id="section1" class="hidden">
+                <h2>Importância da Transcrição de áudio na Acessibilidade</h2>
+                <p>A transcrição de áudio desempenha um papel crucial na promoção da acessibilidade para pessoas com deficiência auditiva,</p>
+                <p>bem como para indivíduos com dificuldades de audição. Aqui estão algumas razões pelas quais a transcrição de áudio é importante para a acessibilidade:</p>
+                <p>Acesso à Informação; Compreensão Integral; Conformidade Legal e Normativa; Melhoria da Indexação e Acessibilidade Online.</p>
+                <p>- World Wide Web Consortium (W3C) -</p>
+                <img src="w3c.png">
+            </div>
         </div>
-      </div>
 
-      <br>
-      <div class="caixa2">
-        <button onclick="toggleVisibility('section2')">Mostrar/Ocultar</button>
-        <div id="section2" class="hidden">
-          <h2>Benefícios da Transcrição em áudio</h2>
-          <p>A transcrição de áudio oferece uma série de benefícios que vão além da acessibilidade para pessoas com deficiência auditiva.</p>
-          <p>Aqui estão alguns dos principais benefícios:</p>
-          <p>Facilidade de Referência; Facilita a Tradução e Localização; Melhoria da Compreensão;</p>
-          <p>Economia de Tempo; Aprimoramento da Pesquisa e Indexação.</p>
-          <img src="primeira.jpg">
-      </div>
-
-      <br>
-      
-      <div class="caixa3">
-        <button onclick="toggleVisibility('section3')">Mostrar/Ocultar</button>
-        <div id="section3" class="hidden">
-          <h2>Softwares de Transcrição que utilizam IA</h2>
-          <p>Google Cloud Speech-to-Text; IBM Watson Speech to Text; Microsoft Azure Speech Service;</p>
-          <p>Otter.ai; Speechmatics; Trint</p>
-          <img src="ia.jpg">
+        <div class="caixa2">
+            <button onclick="toggleVisibility('section2')">Mostrar/Ocultar</button>
+            <div id="section2" class="hidden">
+                <h2>Benefícios da Transcrição em áudio</h2>
+                <p>A transcrição de áudio oferece uma série de benefícios que vão além da acessibilidade para pessoas com deficiência auditiva.</p>
+                <p>Aqui estão alguns dos principais benefícios:</p>
+                <p>Facilidade de Referência; Facilita a Tradução e Localização; Melhoria da Compreensão;</p>
+                <p>Economia de Tempo; Aprimoramento da Pesquisa e Indexação.</p>
+                <img src="primeira.jpg">
+            </div>
         </div>
-      </div>
-      <br>
-      <button id="startButton">Iniciar Transcrição</button>
-      <div id="transcription"></div>
-      <br>
 
-  </main>
+        <div class="caixa3">
+            <button onclick="toggleVisibility('section3')">Mostrar/Ocultar</button>
+            <div id="section3" class="hidden">
+                <h2>Softwares de Transcrição que utilizam IA</h2>
+                <p>Google Cloud Speech-to-Text; IBM Watson Speech to Text; Microsoft Azure Speech Service;</p>
+                <p>Otter.ai; Speechmatics; Trint</p>
+                <img src="ia.jpg">
+            </div>
+        </div>
+    </div>
+    <br>
+    <button id="startButton">Iniciar Transcrição</button>
+    <div id="transcription"></div>
+    <br>
+</main>
+
+
   
   <footer class="h-f">
     <p>© 2024 – Transcrição de áudio na Acessibilidade - Desenvolvido por Flávia Liboredo</p>
